--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,9 @@ body {
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#959595+0,0d0d0d+46,010101+50,0a0a0a+53,4e4e4e+76,383838+87,1b1b1b+100;Black+Gloss+Pipe */
   background-image: linear-gradient(
     -225deg,
-    #d8dce3 0%,
-    #d8dce3 48%,
-    #d8dce3 100%
+    #f5f5f5 0%,
+    #f5f5f5 48%,
+    #f5f5f5 100%
   );
   /* Add the blur effect */
 
