--- a/src/pages/experience/experience.style.css
+++ b/src/pages/experience/experience.style.css
@@ -9,9 +9,9 @@
 .jumbo-style {
   background-image: linear-gradient(
     -225deg,
-    #3f5277 0%,
-    #3f5277 48%,
-    #3f5277 100%
+    #d3d3d3 0%,
+    #d3d3d3 48%,
+    #d3d3d3 100%
   );
 }
 
@@ -22,4 +22,8 @@
 
 .card-header {
   background-color: #ffffff;
+}
+
+.card-body-color {
+  background-color: #f5f5f5;
 }
