--- a/src/pages/experience/experience.style.css
+++ b/src/pages/experience/experience.style.css
@@ -9,9 +9,9 @@
 .jumbo-style {
   background-image: linear-gradient(
     -225deg,
-    #d3d3d3 0%,
-    #d3d3d3 48%,
-    #d3d3d3 100%
+    #e4eae2 0%,
+    #e4eae2 48%,
+    #e4eae2 100%
   );
 }
 
@@ -21,7 +21,7 @@
 }
 
 .card-header {
-  background-color: #ffffff;
+  background-color: #f5f5f5;
 }
 
 .card-body-color {
