--- a/src/pages/experience/experience.style.css
+++ b/src/pages/experience/experience.style.css
@@ -1,5 +1,5 @@
 .img-resize {
-  width: 10em;
+  width: 9.7em;
 }
 
 .style {
@@ -26,4 +26,8 @@
 
 .card-body-color {
   background-color: #f5f5f5;
+}
+
+.role-name {
+  font-size: 5px;
 }
