styling of expperience component changes

--- a/src/pages/contact-form/contact-form.style.css
+++ b/src/pages/contact-form/contact-form.style.css
@@ -1,6 +1,6 @@
 .contact-jumbotron {
   /*background-image: url("../../assets/img/background/background.webp");*/
-  background-color: #e5ebe3;
+  background-color: #e1e1e6;
   background-size: cover;
   background-repeat: no-repeat;
 }
