--- a/src/pages/experience/experience.style.css
+++ b/src/pages/experience/experience.style.css
@@ -9,9 +9,9 @@
 .jumbo-style {
   background-image: linear-gradient(
     -225deg,
-    #e4eae2 0%,
-    #e4eae2 48%,
-    #e4eae2 100%
+    #e1e1e6 0%,
+    #e1e1e6 48%,
+    #e1e1e6 100%
   );
 }
 
